--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </div>
               <div class="row">
                 <div class="feature-box col-lg-6 col-med-12">
-                  <a href="https://github.com/nunommestre/Nbody-Simulation"><img class="imagem-tourista" src="Images/Algarve.jpeg" alt="Algarve"></a>
+                  <a><img class="imagem-tourista" src="Images/Algarve.jpeg" alt="Algarve"></a>
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Algarve</h3>
@@ -44,7 +44,7 @@
               </div>
               <div class="row">
                 <div class="feature-box col-lg-6 col-med-12">
-                  <a href="https://github.com/nunommestre/SFML-Guitar"><img class="imagem-tourista" src="Images/Barcelona.webp" alt="Barcelona"></a>
+                  <a><img class="imagem-tourista" src="Images/Barcelona.webp" alt="Barcelona"></a>
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Barcelona</h3>
@@ -53,7 +53,7 @@
               </div>
               <div class="row">
                 <div class="feature-box col-lg-6 col-med-12">
-                  <a href="https://github.com/nunommestre/Photo-Magic"><img class="imagem-tourista" src="Images/Madrid4.jpeg" alt="Mardid"></a>
+                  <a><img class="imagem-tourista" src="Images/Madrid4.jpeg" alt="Mardid"></a>
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Mardid</h3>
@@ -62,7 +62,7 @@
               </div>       
               <div class="row">
                 <div class="feature-box col-lg-6 col-med-12">
-                  <a href="https://github.com/nunommestre/Evil-Hangman"><img class="imagem-tourista" src="Images/Sevilla.jpeg" alt="Sevilla"></a>
+                  <a><img class="imagem-tourista" src="Images/Sevilla.jpeg" alt="Sevilla"></a>
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Sevilla</h3>
@@ -71,7 +71,7 @@
               </div>
               <div class="row">
                 <div class="feature-box col-lg-6 col-med-12">
-                  <a href="https://github.com/nunommestre/Sierpinski-Trangle-Fractal"><img class="imagem-tourista" src="Images/Paris.jpeg" alt="Paris"></a>
+                  <a><img class="imagem-tourista" src="Images/Paris.jpeg" alt="Paris"></a>
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Paris</h3>
@@ -82,7 +82,7 @@
               </div>
               <div class="row">
                 <div class="feature-box col-lg-6 col-med-12">
-                  <a href="https://github.com/nunommestre/Ants-and-Doodlebugs"><img class="imagem-tourista" src="Images/Lyon.jpeg" alt="lyon"></a>
+                  <a><img class="imagem-tourista" src="Images/Lyon.jpeg" alt="lyon"></a>
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Lyon</h3>
