--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Lisboa</h3>
-                <p>informacao sobre lisboa</p>
+                <p>Lisboa é a capital de Portugal pai no oeste da Europa.
+                    É um grande ponto turístico principalmente na altura do verão. 
+                    As hospedagens varia dependo dos dias mas uma noite por pessoa 150€ do mais barato podendo chegar aos 900€ ou mais dependo do que se pretender e dos dias. A comida varia entre os 20€ a 150€ por pessoa. 
+                    É um lugar bastante giro os melhores pontos turísticos são a torre de Belém, os mosteiros, e as fontes de cultura existente que são diversas.</p>
               </div>
               </div>
               <div class="row">
@@ -39,7 +42,9 @@
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Algarve</h3>
-                  <p>informacao sobre algarve</p>
+                  <p>Algarve é bastante conheci pelas suas praias e as grutas de benagil, estes são os principais pk tos de turismos.
+                    Um lugar mais visitado no verão. Situa-se no sul de Portugal. 
+                    As hospedagens variam entre os 250€ a 950€ ou mais dele do quarto pretendido. As refeições podem variar entre os 25/30€ a 100/150€ por pessoa dependo do prato.</p>
                 </div>
               </div>
               <div class="row">
@@ -48,7 +53,9 @@
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Barcelona</h3>
-                  <p>informacao sobre barcelona</p>
+                  <p>Barcelona fica no sul de Espanha. 
+                    Os principais pontos turísticos sao a o templo expiatório da sagrada Família, a casa Milá, o estádio do Barcelona, e as fontes de cultura da cidade. 
+                    A hospedagem pode variar entre os 150/200€ a um valar superior por pessoas dependo do que se pretende tal como a comida pode variar entre os 20€ a valores superiores.</p>
                 </div>
               </div>
               <div class="row">
@@ -57,7 +64,8 @@
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Mardid</h3>
-                  <p>informacao sobre madrid</p>
+                  <p>Madrid é a capital da Espanha o país a este de Portugal é uma cidade bastante visitada é um grande ponto turístico pela sua catedral o estádio é o museu do Real Madrid, e não deve deixar de conhecer as suas fontes de cultura para se informar da história por detrás da cidade. 
+                    A hospedagem varia entre os 150/200€ a valores superiores depende do do quarto tal como a comida que pode variar entre os 20€ a valores superiores.</p>
                 </div>
               </div>       
               <div class="row">
@@ -66,7 +74,8 @@
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Sevilla</h3>
-                <p>informacao sobre sevilla</p>
+                <p>Sevilha cidade no sul de Espanha os principais pontos turísticos são a Alcáceres Reais, a placa de espanã e a giralda. 
+                    A hospedagem varia entre os 150€ a valores superiores dependo do pretendido o mesmo acontece nas refeições que dos 20€ podem subir bastante dependo do prato escolhido.</p>
               </div>
               </div>
               <div class="row">
@@ -75,9 +84,7 @@
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Paris</h3>
-                <p>informacao sobre Paris</p>
-                <p>Dicas:</p>
-                <p>Lugares para visitar:</p>
+                <p>Paris capital de França conhecida pela torre Eiffel, catedral de notre-dame, museu do louvre e o estádio do pari saint germain. As hospedagens variam entre os 200€ a valores bastante superiores tal como na alimentação dos 25€ a valores bem mais altos.</p>
               </div>
               </div>
               <div class="row">
@@ -86,9 +93,17 @@
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Lyon</h3>
-                <p>informacao sobre Lyon</p>
+                <p>Lyon região situada na região francesa do ródano-Alpes que tem como principais pontos turísticos a basílica de Notre-Dame de Fourvière, parque de tête d’Or , Confluences Museum e os estádio do Lyon. 
+                    As hospedagens podem variar entre os 200€ e valores superiores a 850€ e a comida dos 25€ a valores superiores a 100€ dependo do escolhido</p>
               </div>
+              <div class="row">
+                <div class="col-lg-6 col-med-12">
+                  <p>Para mais informações</p>
+                  <p>Email: <em>viajarsemduvidas@gmail.com</em></p>
+                  <p>Telefone: <em>960 364 225</em> ou <em>926 561 929</em></p>
+                </div>
               </div>
+
             </div>
           </section>
     </body>
