--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <h2 class="projects">Dicas e Lugares para visitar</h2>
               <div class="row">
                 <div class="feature-box col-lg-6 col-med-12">
-                  <a href="https://testnets.opensea.io/collection/rainforest-club"><img class="imagem-tourista" src="Images/Lisboa.jpeg"></a>
+                  <a><img class="imagem-tourista" src="Images/Lisboa.jpeg"></a>
                 </div>
                 <div class="feature-box col-lg-6 col-med-12">
                   <h3>Lisboa</h3>
